// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a default SelectField component 1`] = `
<div
  className="field"
>
  <div
    className="label-group"
  >
    <label
      className="label"
      htmlFor="select-id"
    >
      Label
    </label>
    <div
      className="error-icon-hidden"
    >
      <IconError
        viewBox="0 0 48 48"
        xmlns="http://www.w3.org/2000/svg"
      />
    </div>
  </div>
  <Select
    allowClear={false}
    ariaLabel="Label"
    defaultValue="blue"
    disabled={false}
    id="select-id"
    isIncomplete={false}
    isInvalid={false}
    isTouchAccessible={false}
    key=".0"
    required={false}
    variant="default"
  >
    <InjectIntl(Option)
      display="Blue"
      value="blue"
    />
    <InjectIntl(Option)
      display="Green"
      value="green"
    />
    <InjectIntl(Option)
      display="Purple"
      value="purple"
    />
    <InjectIntl(Option)
      display="Red"
      value="red"
    />
    <InjectIntl(Option)
      display="Violet"
      value="violet"
    />
  </Select>
</div>
`;

exports[`should render a default SelectField component with attributes spread onto the select 1`] = `
<div
  className="field"
>
  <div
    className="label-group"
  >
    <label
      className="label"
      htmlFor="select-id"
    >
      Label
    </label>
    <div
      className="error-icon-hidden"
    >
      <IconError
        viewBox="0 0 48 48"
        xmlns="http://www.w3.org/2000/svg"
      />
    </div>
  </div>
  <Select
    allowClear={false}
    ariaLabel="Label"
    defaultValue="blue"
    disabled={false}
    id="select-id"
    isIncomplete={false}
    isInvalid={false}
    isTouchAccessible={false}
    key=".0"
    onClick={[Function]}
    required={false}
    variant="default"
  >
    <InjectIntl(Option)
      display="Blue"
      value="blue"
    />
    <InjectIntl(Option)
      display="Green"
      value="green"
    />
    <InjectIntl(Option)
      display="Purple"
      value="purple"
    />
    <InjectIntl(Option)
      display="Red"
      value="red"
    />
    <InjectIntl(Option)
      display="Violet"
      value="violet"
    />
  </Select>
</div>
`;

exports[`should render a disabled SelectField component 1`] = `
<div
  className="field"
>
  <div
    className="label-group"
  >
    <label
      className="label"
      htmlFor="select-id"
    >
      Label
    </label>
    <div
      className="error-icon-hidden"
    >
      <IconError
        viewBox="0 0 48 48"
        xmlns="http://www.w3.org/2000/svg"
      />
    </div>
  </div>
  <Select
    allowClear={false}
    ariaLabel="Label"
    defaultValue="blue"
    disabled={true}
    id="select-id"
    isIncomplete={false}
    isInvalid={false}
    isTouchAccessible={false}
    key=".0"
    required={false}
    variant="default"
  >
    <InjectIntl(Option)
      display="Blue"
      value="blue"
    />
    <InjectIntl(Option)
      display="Green"
      value="green"
    />
    <InjectIntl(Option)
      display="Purple"
      value="purple"
    />
    <InjectIntl(Option)
      display="Red"
      value="red"
    />
    <InjectIntl(Option)
      display="Violet"
      value="violet"
    />
  </Select>
</div>
`;

exports[`should render a disabled SelectField component via selectAttrs 1`] = `
<div
  className="field"
>
  <div
    className="label-group"
  >
    <label
      className="label"
      htmlFor="select-id"
    >
      Label
    </label>
    <div
      className="error-icon-hidden"
    >
      <IconError
        viewBox="0 0 48 48"
        xmlns="http://www.w3.org/2000/svg"
      />
    </div>
  </div>
  <Select
    allowClear={false}
    ariaLabel="Label"
    defaultValue="blue"
    disabled={true}
    id="select-id"
    isIncomplete={false}
    isInvalid={false}
    isTouchAccessible={false}
    key=".0"
    required={false}
    variant="default"
  >
    <InjectIntl(Option)
      display="Blue"
      value="blue"
    />
    <InjectIntl(Option)
      display="Green"
      value="green"
    />
    <InjectIntl(Option)
      display="Purple"
      value="purple"
    />
    <InjectIntl(Option)
      display="Red"
      value="red"
    />
    <InjectIntl(Option)
      display="Violet"
      value="violet"
    />
  </Select>
</div>
`;

exports[`should render a max height SelectField component 1`] = `
<div
  className="field"
>
  <div
    className="label-group"
  >
    <label
      className="label"
      htmlFor="select-id"
    >
      Label
    </label>
    <div
      className="error-icon-hidden"
    >
      <IconError
        viewBox="0 0 48 48"
        xmlns="http://www.w3.org/2000/svg"
      />
    </div>
  </div>
  <Select
    allowClear={false}
    ariaLabel="Label"
    defaultValue="blue"
    disabled={false}
    id="select-id"
    isIncomplete={false}
    isInvalid={false}
    isTouchAccessible={false}
    key=".0"
    maxHeight={100}
    required={false}
    variant="default"
  >
    <InjectIntl(Option)
      display="Blue"
      value="blue"
    />
    <InjectIntl(Option)
      display="Green"
      value="green"
    />
    <InjectIntl(Option)
      display="Purple"
      value="purple"
    />
    <InjectIntl(Option)
      display="Red"
      value="red"
    />
    <InjectIntl(Option)
      display="Violet"
      value="violet"
    />
  </Select>
</div>
`;

exports[`should render a multiple SelectField component that limits the selection count 1`] = `
<div
  className="field"
>
  <div
    className="label-group"
  >
    <label
      className="label"
      htmlFor="select-id"
    >
      Label
    </label>
    <div
      className="error-icon-hidden"
    >
      <IconError
        viewBox="0 0 48 48"
        xmlns="http://www.w3.org/2000/svg"
      />
    </div>
  </div>
  <Select
    allowClear={false}
    aria-describedby="select-id-help"
    ariaLabel="Label"
    defaultValue="blue"
    disabled={false}
    id="select-id"
    isIncomplete={false}
    isInvalid={false}
    isTouchAccessible={false}
    key=".0"
    maxSelectionCount={2}
    onClick={[Function]}
    required={false}
    variant="multiple"
  >
    <InjectIntl(Option)
      display="Blue"
      value="blue"
    />
    <InjectIntl(Option)
      display="Green"
      value="green"
    />
    <InjectIntl(Option)
      display="Purple"
      value="purple"
    />
    <InjectIntl(Option)
      display="Red"
      value="red"
    />
    <InjectIntl(Option)
      display="Violet"
      value="violet"
    />
  </Select>
  <div
    className="help-text"
    id="select-id-help"
  >
    <span>
      Terra.form.select.maxSelectionHelp
       
      Help Text
    </span>
  </div>
</div>
`;

exports[`should render a required SelectField component 1`] = `
<div
  className="field"
>
  <div
    className="label-group"
  >
    <label
      className="label"
      htmlFor="select-id"
    >
      <div
        aria-hidden="true"
        className="required"
      >
        *
      </div>
      Label
    </label>
    <div
      className="error-icon-hidden"
    >
      <IconError
        viewBox="0 0 48 48"
        xmlns="http://www.w3.org/2000/svg"
      />
    </div>
  </div>
  <Select
    allowClear={false}
    ariaLabel="Label"
    defaultValue="blue"
    disabled={false}
    id="select-id"
    isIncomplete={false}
    isInvalid={false}
    isTouchAccessible={false}
    key=".0"
    required={true}
    variant="default"
  >
    <InjectIntl(Option)
      display="Blue"
      value="blue"
    />
    <InjectIntl(Option)
      display="Green"
      value="green"
    />
    <InjectIntl(Option)
      display="Purple"
      value="purple"
    />
    <InjectIntl(Option)
      display="Red"
      value="red"
    />
    <InjectIntl(Option)
      display="Violet"
      value="violet"
    />
  </Select>
</div>
`;

exports[`should render an incomplete SelectField component 1`] = `
<div
  className="field"
>
  <div
    className="label-group"
  >
    <label
      className="label"
      htmlFor="select-id"
    >
      Label
    </label>
    <div
      className="error-icon-hidden"
    >
      <IconError
        viewBox="0 0 48 48"
        xmlns="http://www.w3.org/2000/svg"
      />
    </div>
  </div>
  <Select
    allowClear={false}
    ariaLabel="Label"
    defaultValue="blue"
    disabled={false}
    id="select-id"
    isIncomplete={true}
    isInvalid={false}
    isTouchAccessible={false}
    key=".0"
    required={false}
    variant="default"
  >
    <InjectIntl(Option)
      display="Blue"
      value="blue"
    />
    <InjectIntl(Option)
      display="Green"
      value="green"
    />
    <InjectIntl(Option)
      display="Purple"
      value="purple"
    />
    <InjectIntl(Option)
      display="Red"
      value="red"
    />
    <InjectIntl(Option)
      display="Violet"
      value="violet"
    />
  </Select>
</div>
`;
